fix loadmore width on mobile rake_auto_push

--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -58,6 +58,9 @@ table {
 		width:46px;
 		height:46px;
 	}
+	@media #{$sm} {
+		margin:0;
+	}
 }
 
 .post--img {
